# sentencesplit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LIBRARY_REVIEW.md  LICENSE  README.md  SECURITY.md  _diag_test.py  analyze_differences.py  analyze_v2.py  analyze_v3.py  compare_splitters.py  final_verdicts.py  package-lock.json  package.json  pyproject.toml  requirements-benchmark.txt
.claude/workflows/: compare-segmenters.js  execute-roadmap.js  fix-review-findings.js  improve-sentencesplit.js  level-up.js  library-review.js  parallel-implement-review.js
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codspeed.yml  publish.yml  python-package.yml  release.yml
analysis/: ABBREVIATION_ENGINE_V2_PLAN.md  ABBREVIATION_ENGINE_V2_RFC.md  LEVEL_UP_PLAN.md  REFACTOR_PLAN.md  REVIEW_NOW.md  REVIEW_NOW_FIXES.md  ROADMAP_EXECUTION.md  SHORT_STRING_LATENCY_PLAN.md  V2_ABBR_CLEANUP_REPORT.md  V2_IMPLEMENTATION_REPORT.md  V2_REFACTOR_ROADMAP.md  V2_RFC_EVALUATION.md  V2_TECHDEBT_PAYDOWN_REPORT.md  analyze_disagreements_v1.py  analyze_disagreements_v2.py  analyze_disagreements_v3.py  assign_verdicts.py  compare_pysbd_vs_punkt.py  compare_three_splitters.py  compare_three_splitters_other30.py  compare_wiki_other30.py  compare_wiki_small.py  pysbd_architecture_report.md  pysbd_vs_punkt_results.json  v2_baseline_perf.txt  verdicts.json  wiki_other30_comparison.json  wiki_other30_report.md  wiki_small_comparison.json  wiki_small_report.md
benchmarks/: _samples.py  abbr_scan_compare.py  benchmark_sbd_tools.py  bigtext_speed_benchmark.py  differential_profile.py  english_golden_rules.py  genia_benchmark.py  golden_rules.txt  latency_baseline.py  phase_profile.py  short_string_benchmark.py  streaming_latency_benchmark.py  test_competitive_codspeed.py  test_corpus_compare_segmenters.py  test_latency_codspeed.py  test_pypy_walltime_codspeed.py  test_walltime_compare_codspeed.py  timing_script.py
benchmarks/corpus_compare/: .gitignore  corpora.py  pragmatic_runner.rb  run_compare.py  segmenters.py
docs/: architecture.md
eval/: bostock_v_clayton.txt  compare.py  google_v_oracle.txt  pto_v_booking.txt
examples/: custom_language_with_processor_hooks.py  pysbd_as_spacy_component.py  sentencesplit_as_spacy_component.py  streaming_to_tts_recipe.py  test_timing_script.py
pysbd/: __init__.py  abbreviation_replacer.py  about.py  between_punctuation.py  cleaner.py  exclamation_words.py  languages.py  lists_item_replacer.py  processor.py  punctuation_replacer.py  segmenter.py  spacy_component.py  utils.py
pysbd/clean/: rules.py
pysbd/lang/: amharic.py  arabic.py  armenian.py  bulgarian.py  burmese.py  chinese.py  danish.py  deutsch.py  dutch.py  english.py  french.py  greek.py  hindi.py  italian.py  japanese.py  kazakh.py  marathi.py  persian.py  polish.py  russian.py  slovak.py  spanish.py  urdu.py
sentencesplit/: __init__.py  __init__.pyi  _abbr_policy.py  _abbreviation_data.py  _aho_corasick.py  _normalize.py  _sentinel.py  abbreviation_replacer.py  about.py  between_punctuation.py  boundary_resplit.py  cleaner.py  exceptions.py  exclamation_words.py  language_profile.py  languages.py  lists_item_replacer.py  period_classifier.py  processor.py  punctuation_replacer.py  segmenter.py  spacy_component.py  stream_segmenter.py  utils.py
sentencesplit/clean/: rules.py
sentencesplit/lang/: amharic.py  arabic.py  armenian.py  bulgarian.py  burmese.py  chinese.py  danish.py  deutsch.py  dutch.py  en_es_zh.py  en_legal.py  english.py  french.py  greek.py  hindi.py  italian.py  japanese.py  kazakh.py  marathi.py  persian.py  polish.py  russian.py  slovak.py  spanish.py  tagalog.py  urdu.py
tests/: conftest.py  helpers.py  test_abbreviation_corpus_en.py  test_abbreviation_data_lint.py  test_abbreviation_replacer.py  test_about.py  test_cleaner.py  test_corpus_compare_segmenters.py  test_language_profile.py  test_languages.py  test_lookahead.py  test_pdf_cleaning.py  test_period_classifier.py  test_processor.py  test_properties.py  test_punctuation_replacer.py  test_segmenter.py  test_spacy_component.py  test_span_roundtrip.py  test_split_mode.py  test_stream_segmenter.py  test_utils.py  test_zero_dependencies.py
tests/contract/: test_abbreviation_corpus_en.py  test_lookahead.py  test_period_classifier.py  test_period_classifier_en.py  test_processor.py  test_properties.py  test_span_roundtrip.py  test_split_mode.py  test_stream_segmenter.py
tests/data/: abbreviation_corpus_en.py
tests/lang/: test_amharic.py  test_arabic.py  test_armenian.py  test_bulgarian.py  test_burmese.py  test_chinese.py  test_danish.py  test_deutsch.py  test_dutch.py  test_en_es_zh.py  test_en_legal.py  test_english.py  test_english_challenging.py  test_english_clean.py  test_french.py  test_greek.py  test_hindi.py  test_italian.py  test_japanese.py  test_kazakh.py  test_marathi.py  test_persian.py  test_polish.py  test_russian.py  test_slovak.py  test_spanish.py  test_tagalog.py  test_urdu.py
tests/meta/: test_abbreviation_data_lint.py  test_about.py  test_exception_hierarchy.py  test_language_reregistration.py  test_lazy_language_codes_views.py  test_zero_dependencies.py
tests/pyodide/: smoke_test.mjs
tests/regression/: segment_snapshot.json  segment_snapshot.py  test_abbr_dot_normalization.py  test_abbreviation_dotted_i.py  test_abbreviation_order_independence.py  test_arabic_script_abbreviation_metachar.py  test_between_punctuation_guard.py  test_bulgarian_cyrillic_abbreviations.py  test_char_span_deprecation.py  test_free_threading.py  test_german_standalone_i.py  test_greek_abbreviations.py  test_issues.py  test_kazakh_multiperiod_sentinel.py  test_latin_upper_contract.py  test_lazy_import.py  test_library_review_fixes.py  test_processor_robustness.py  test_pypy_possessive_quantifier.py  test_regression_gate.py  test_segment_snapshot.py  test_span_match_perf.py  test_starter_aware_per_occurrence.py  test_stream_cluster_terminator.py  test_stream_grown_whitespace.py  test_titled_name_and_timezone.py
tests/v2/: __init__.py  (+7 more)
(+28 files in other folders)
