[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "pysbd"
version = "0.3.4"
description = "pysbd (Python Sentence Boundary Disambiguation) is a rule-based sentence boundary detection that works out-of-the-box across many languages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Nipun Sadvilkar", email = "nipunsadvilkar@gmail.com" }
]
keywords = ["natural-language-processing", "nlp"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "http://nipunsadvilkar.github.io/"
Repository = "https://github.com/nipunsadvilkar/pySBD"

[project.optional-dependencies]
benchmark = [
  "blingfire>=0.1.8",
  "nltk>=3.9",
  "spacy>=3.7",
  "stanza>=1.8",
  "syntok>=1.4.4",
]

[project.entry-points."spacy_factories"]
pysbd = "pysbd.spacy_component:PySBDFactory"

[dependency-groups]
dev = [
  "ruff>=0.9",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 127
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"pysbd/lang/**" = ["E501"]
"pysbd/about.py" = ["E501"]
"pysbd/exclamation_words.py" = ["E501"]
"pysbd/lists_item_replacer.py" = ["E501"]
"pysbd/processor.py" = ["C901"]
"benchmarks/english_golden_rules.py" = ["E501"]
"analyze_differences.py" = ["C901"]
"analyze_v2.py" = ["C901"]
"compare_splitters.py" = ["C901"]
"final_verdicts.py" = ["C901"]
"examples/test_timing_script.py" = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
