[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[project]
name = "sentencesplit"
version = "0.4.0"
description = "sentencesplit is a rule-based sentence boundary detection library, derived from pySBD (Python Sentence Boundary Disambiguation), that works out-of-the-box across many languages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Nipun Sadvilkar", email = "nipunsadvilkar@gmail.com" },
  { name = "Yi Ding", email = "yi.s.ding@gmail.com" },
]
keywords = ["natural-language-processing", "nlp"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Repository = "https://github.com/yisding/sentencesplit"

[project.optional-dependencies]
benchmark = [
  "blingfire>=0.1.8",
  "nltk>=3.9",
  "spacy>=3.8",
  "stanza>=1.8",
  "syntok>=1.4.4",
]

[project.entry-points."spacy_factories"]
sentencesplit = "sentencesplit.spacy_component:SentenceSplitFactory"

[dependency-groups]
dev = [
  "ruff>=0.9",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 127
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"sentencesplit/lang/**" = ["E501"]
"sentencesplit/about.py" = ["E501"]
"sentencesplit/exclamation_words.py" = ["E501"]
"sentencesplit/lists_item_replacer.py" = ["E501"]
"sentencesplit/processor.py" = ["C901"]
"benchmarks/english_golden_rules.py" = ["E501"]
"analysis/analyze_disagreements_v1.py" = ["C901"]
"analysis/analyze_disagreements_v2.py" = ["C901"]
"analysis/compare_pysbd_vs_punkt.py" = ["C901"]
"analysis/assign_verdicts.py" = ["C901"]
"examples/test_timing_script.py" = ["E501", "E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
