[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "sentencesplit"
version = "0.1.0"
description = "sentencesplit is a rule-based sentence boundary detection library, derived from pySBD (Python Sentence Boundary Disambiguation), that works out-of-the-box across many languages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Nipun Sadvilkar", email = "nipunsadvilkar@gmail.com" },
  { name = "Yi Ding", email = "yi.s.ding@gmail.com" },
]
keywords = [
  "natural-language-processing",
  "nlp",
  "sentence-boundary-detection",
  "sentence-segmentation",
  "sentence-tokenizer",
  "sentence-splitter",
  "tokenization",
  "pysbd",
  "rag",
  "chunking",
  "streaming",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 2 - Beta",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yisding/sentencesplit"
Repository = "https://github.com/yisding/sentencesplit"
Issues = "https://github.com/yisding/sentencesplit/issues"
Changelog = "https://github.com/yisding/sentencesplit/blob/main/CHANGELOG.md"

[project.optional-dependencies]
spacy = ["spacy>=3.8"]
benchmark = [
  "blingfire>=0.1.8",
  "nltk>=3.9",
  "spacy>=3.8",
  "stanza>=1.8",
  "syntok>=1.4.4",
]
release = ["python-semantic-release>=10,<11"]

[project.entry-points."spacy_factories"]
sentencesplit = "sentencesplit.spacy_component:create_sentencesplit"

[dependency-groups]
dev = [
  "ruff>=0.9",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "nltk>=3.9.2",
  "pre-commit>=4.5.1",
  # Property-based round-trip tests for segment_spans() (see
  # tests/test_span_roundtrip.py). DEV-ONLY: the zero-dependency core must
  # never import Hypothesis — guarded by tests/test_zero_dependencies.py.
  "hypothesis>=6.0",
  "mypy>=1.11",
]
# Isolated from `dev` so the main test/lint matrix never pulls the benchmark
# tooling. Used only by the CodSpeed workflow (.github/workflows/codspeed.yml).
bench = [
  "pytest>=8.0",
  "pytest-codspeed>=2.2",
  # Competitive comparison peers (both pure Python, so instruction-count
  # comparisons against them are fair). See benchmarks/test_competitive_codspeed.py.
  "pysbd>=0.3.4",
  "nltk>=3.9.2",
]

[tool.uv.build-backend]
module-root = ""

[tool.ruff]
line-length = 127
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
mccabe.max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]
"sentencesplit/lang/**" = ["E501"]
"sentencesplit/about.py" = ["E501"]
"sentencesplit/exclamation_words.py" = ["E501"]
"sentencesplit/lists_item_replacer.py" = ["E501"]
"benchmarks/english_golden_rules.py" = ["E501"]
"analysis/analyze_disagreements_v1.py" = ["C901"]
"analysis/analyze_disagreements_v2.py" = ["C901"]
"analysis/compare_pysbd_vs_punkt.py" = ["C901"]
"analysis/assign_verdicts.py" = ["C901"]
"benchmarks/corpus_compare/run_compare.py" = ["C901"]
"benchmarks/timing_script.py" = ["E501", "E402"]

[tool.mypy]
python_version = "3.11"
files = [
  "sentencesplit/segmenter.py",
  "sentencesplit/stream_segmenter.py",
  "sentencesplit/utils.py",
  "sentencesplit/language_profile.py",
  "sentencesplit/exceptions.py",
  "sentencesplit/__init__.py",
]
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["spacy", "spacy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Fail the suite if an xfail-marked test starts passing, so a fixed bug's stale
# xfail can't silently rot as an xpass.
xfail_strict = true
# -ra: show a short summary of all non-passing outcomes.
# --strict-config: error out on unknown/typo'd ini keys.
# --import-mode=importlib: modern, isolated test-module imports.
addopts = ["-ra", "--strict-config", "--import-mode=importlib"]
markers = [
  "perf: timing-sensitive performance regression guards",
]
filterwarnings = [
  # Many span-contract tests intentionally exercise the deprecated char_span
  # alias. The dedicated regression tests still assert the warning fires.
  "ignore:char_span is deprecated; use segment_spans\\(\\):DeprecationWarning",
]

[tool.semantic_release]
tag_format = "v{version}"
allow_zero_version = true
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
build_command = """
uv lock --upgrade-package "$PACKAGE_NAME"
git add uv.lock
uv build
"""

[tool.coverage.run]
branch = true
source = ["sentencesplit"]

[tool.coverage.report]
show_missing = true
# Conservative ratchet: floor(measured TOTAL %) minus 3. Branch coverage and
# the intentional char_span deprecation path keep this comfortably below the
# observed ~95% so the gate is non-flaky.
fail_under = 93
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
